greedy funcionando